--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -7,7 +7,7 @@
 @mixin light-theme {
   --color-text: #001a41;
   --color-background: linear-gradient(-45deg, #EDF1F4, #C3CBDC, #DEE4EA, #F9FCFF);
-  --image-background-2: url("../../public/images/bg-desktop-light.jpg");
+  --image-background-2: url("/images/bg-desktop-light.jpg");
   --color-text-gradient: -webkit-linear-gradient(45deg, #c20ea1, #dd2d7f, #ee4c5e, #f46d41);
   --color-input: #FFFFFF;
   --color-border: hsl(233, 11%, 84%);
@@ -18,7 +18,7 @@
 @mixin dark-theme {
   --color-text: #f4eee0;
   --color-background: linear-gradient(-45deg, #121212, #1a1a1a, #1a1625, #2f2b3a);
-  --image-background-2: url("../../public/images/bg-desktop-dark.jpg");
+  --image-background-2: url("/images/bg-desktop-dark.jpg");
   --color-text-gradient: -webkit-linear-gradient(45deg, #f2efdc, #f5f5f5);
   --color-input: #25273C;
   --color-border: hsl(234, 11%, 52%);
